css/styles.css
/* Загальні стилі для тіла сторінки */
body {
  font-family: Roboto, sans-serif; /*Основний шрифт + альтернативний*/
  line-height: 1.5; /*Висота рядка*/
  background-color: #ffffff;
  color: #434455;
  font-size: 16px;
}

/* reset */
ul,
ol {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

h1, h2, h3, h4, h5, h6, p {
  margin: 0;
}

a {
  text-decoration: none;
}

/* common */
.container {
  max-width: 1158px;
  margin: 0 auto;
  padding: 0 15px;
}

/* header */
.page-header {
  border-bottom: 1px solid #e7e9fc;
}

.header-container {
 display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-nav {
  display: flex;
  align-items: center;
}

.nav-list {
  display: flex;
  gap: 40px;
  align-items: center;
}

/* Логотип */
.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
}

.header-logo {
  margin-right: 76px;
  padding: 24px 0;
}

/* Виділення частини тексту в логотипі */
.header-logo .logo-part {
  color: #2e2f42;
}

.footer-logo .logo-part {
  color: #f4f4fd;
}

/* Навігаційні посилання */
.nav-link {
  display: block;
  padding: 24px 0;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

/* Контактні посилання */
.contacts {
  font-style: normal;
  margin-left: auto;
}

.contacts-list {
  display: flex;
  gap: 40px;
  align-items: center;
}

.contacts-link {
  display: block;
  padding: 24px 0;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

/* Ховер-ефекти для посилань */
.nav-link:hover,
.nav-link:focus,
.contacts-link:hover,
.contacts-link:focus {
color: #404bbf;
background-color: transparent;
}

.main-container {
display:flex;
flex-direction: column;
text-align: center;
align-items: center;
}

/* Ховер-ефект для кнопки у головній секції */
.bt-title-main:hover,
.bt-title-main:focus {
background-color: #404bbf;
color:#ffffff
}

/* Головна секція */
.section-main {
  width: 100%;
  background-color: #2e2f42;
  padding-top: 188px;
  padding-bottom: 188px;
  margin-left: auto;
  margin-right: auto;
}

.title-main {
  max-width: 496px;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  color: #ffffff;
  text-align: center;
  margin-bottom: 48px;
}

/* Кнопка у головній секції */
.bt-title-main {
  width: 169px;
  font-size: 16px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #fff;
  background-color: #4d5ae5;
  cursor: pointer;
  padding: 16px 32px;
  box-sizing: border-box;
  border-radius: 4px;
  white-space: nowrap;
  margin-left: auto;
  margin-right: auto;
}

/* Підзаголовки */
.subtitle {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px; /* відстань після заголовка */
}

.section-first-list {
  display: flex;      /* робимо список горизонтальним */
  gap: 24px;          /* відстань між елементами */
  list-style: none;   /* прибираємо маркери */
  padding: 0;
  margin: 0;
}

.section-first {
  width: 100%;
  padding-top: 120px;
  padding-bottom: 120px;
  background-color: #ffffff;
} 

.section-first-item {
  width: calc((100% - 24px * 3) / 4); 
  text-align: left;   
}

/* Основний текст  */
.text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

/* Заголовки секцій */
.title {
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  padding-bottom: 72px;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* Друга секція */
.section-second {
  width: 100%;
  padding-top: 120px;
  padding-bottom: 120px;
  background-color: #f4f4fd;
}

.section-second-list {
  display: flex;            /* гнучкий контейнер */
  gap: 24px;                /* відстань між картками */
  justify-content: center;  /* вирівнювання по центру */
  flex-wrap: wrap;     /* перенос на новий ряд при малих екранах */
}

.section-second-item {
  width: calc((100% - 24px * 3) / 4); 
  text-align: center;         
  background-color: #ffffff;
  border-radius: 0 0 4px 4px;
  box-shadow:
   0 2px 1px 0 rgba(46, 47, 66, 0.08),
   0 1px 1px 0 rgba(46, 47, 66, 0.16),
   0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.photo-team {
  display: block;
  width: 100%;               
  height: auto;               
}

.card {
 padding: 32px 16px 32px 16px;
 }

.section-second .subtitle,
.section-second .text {
text-align: center;
}

.section-third {
  width: 100%;
  padding-top: 120px;
  padding-bottom: 120px;
  background-color: #ffffff;
}

.section-third-list {
  display: flex;           /* гнучкий контейнер */
  gap: 24px 48px;           /* відстань між картками та рядками */
  justify-content: center;  /* вирівнювання по центру */
  flex-wrap: wrap;   
}

.section-third-list .card {
  border-bottom: 1px solid #E7E9FC;
  border-left: 1px solid #E7E9FC;
  border-right: 1px solid #E7E9FC;
}
 .section-third-item {
  width: calc((100% - 24px * 2) / 3); 
  text-align: left;  
  background-color: #ffffff;
}

/* Підвал сторінки */
.page-footer {
 width: 100%;
 padding-top: 100px;
 padding-bottom: 100px;
 background-color: #2e2f42;
}

/* Стилі тексту футера */
.footer-text {
max-width: 264px;
line-height: 1.5;
letter-spacing: 0.02em;
color: #f4f4fd;
margin-top: 16px;
}

